--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         if(playd==1){
             return
         }
-        document.getElementById("hp2").style.color="#000000"
+        document.getElementById("hp2").style.color="#ff0000"
         num=kaisu
         motopp2=nowpp2
         // タイマー開始
@@ -159,12 +159,12 @@
         document.getElementById("hp1").innerHTML=nowpp1
         document.getElementById("hp2").innerHTML=nowpp2
         if(nowpp1<1){
-            document.getElementById("hp1").style.backgroundColor="#ff0000"
+            document.getElementById("hp1").style.backgroundColor="#ffaa00"
         }else{
             document.getElementById("hp1").style.backgroundColor="#ffffff"
         }
         if(nowpp2<1){
-            document.getElementById("hp2").style.backgroundColor="#ff0000"
+            document.getElementById("hp2").style.backgroundColor="#ffaa00"
         }else{
             document.getElementById("hp2").style.backgroundColor="#ffffff"
         }
